[package]
name = "forest_fm"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1"
winit = "0.30"
pollster = "0.4"          # block_on for async wgpu init
bytemuck = { version = "1.18", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }  # SIMD math
walkdir = "2.5"           # filesystem traversal
ahash = "0.8"             # fast hasher for deterministic randomness
glyphon = "0.6"           # text rendering on top of wgpu (cosmic-text based)
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
